--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selftrades-admin",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://178.18.250.20:5000",
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
